--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\localdb;Database=JobFinderDB;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+
+  "Jwt": {
+    "Key": "ThisIsASecretKeyForJWT",
+    "Issuer": "JobFinder",
+    "Audiance": "JobFinderUsers",
+    "DurationInMinutes": 60
   }
 }
