--- a/appsettings.json
+++ b/appsettings.json
@@ -11,7 +11,7 @@
   },
 
   "Jwt": {
-    "Key": "ThisIsASecretKeyForJWT",
+    "Key": "fA@9kM#3Zx!uQs76HdL0gNpA2rXcYtBj",
     "Issuer": "JobFinder",
     "Audiance": "JobFinderUsers",
     "DurationInMinutes": 60
