added required null checks and spelling corrections

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
   "Jwt": {
     "Key": "fA@9kM#3Zx!uQs76HdL0gNpA2rXcYtBj",
     "Issuer": "JobFinder",
-    "Audiance": "JobFinderUsers",
+    "Audience": "JobFinderUsers",
     "DurationInMinutes": 60
   }
 }
