added default admin user creation when app starts

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
   },
@@ -15,5 +15,10 @@
     "Issuer": "JobFinder",
     "Audience": "JobFinderUsers",
     "DurationInMinutes": 60
+  },
+  "AdminUser": {
+    "UserName": "admin",
+    "Email": "admin@jobfinder.com",
+    "Password": "Admin@123"
   }
 }
